--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -18,6 +18,9 @@ LIBRARIES = @LIBS@
 YACC = @YACC@
 
 CFLAGS = -O
+# If you're using GCC, you may prefer:
+# CFLAGS = -O2 -finline-functions
+
 YFLAGS = -d
 COMPILE.c = $(CC) $(CFLAGS) $(CPPFLAGS) -c
 
@@ -139,11 +142,14 @@ depend: ${ALL_CSRCS}
 	echo '$$r makedep' >>eddep
 	echo 'w' >>eddep
 	cp Makefile.in Makefile.in.bak
-	ex - Makefile.in < eddep
+	ed - Makefile.in < eddep
 	rm -f eddep makedep
 
 ###############################################################################
 # $Log: not supported by cvs2svn $
+# Revision 1.2  1997/03/03 04:40:46  nop
+# Avoid running autoconf automatically
+#
 # Revision 1.1.1.1  1997/03/03 03:45:05  nop
 # LambdaMOO 1.8.0p5
 #
