--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -132,8 +132,10 @@ tags:
 	etags -t $(SRCS)
 
 clean:
-	rm -f $(OBJS) core y.tab.c y.tab.h y.output makedep eddep config.h \
-	      Makefile config.status
+	rm -f $(OBJS) core y.tab.c y.tab.h y.output makedep eddep 
+
+distclean:	clean
+	rm -f config.h Makefile config.status
 
 depend: ${ALL_CSRCS}
 	rm -f eddep makedep
@@ -147,6 +149,10 @@ depend: ${ALL_CSRCS}
 
 ###############################################################################
 # $Log: not supported by cvs2svn $
+# Revision 1.3  1997/03/03 05:55:14  nop
+# Changed to ed for make depend, since ex is a cheap plastic imitation of ed
+# on many Linux systems.  Added better optimization suggestion.
+#
 # Revision 1.2  1997/03/03 04:40:46  nop
 # Avoid running autoconf automatically
 #
