--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -154,9 +154,6 @@ depend: ${ALL_CSRCS}
 
 ###############################################################################
 # $Log: not supported by cvs2svn $
-# Revision 1.7  2000/01/11 01:54:05  nop
-# CFLAGS line for poor users without inline keyword.
-#
 # Revision 1.6  2000/01/11 01:39:14  nop
 # Long overdue make depend
 #
@@ -290,8 +287,8 @@ depend: ${ALL_CSRCS}
 # Revision 1.3  1992/07/27  18:30:21  pjames
 # Update what vector.o and vector.po depend on.
 ###############################################################################
-
-# Have to do this one manually, since make depend cannot hack yacc files.
+	
+# Have to do this one manually, since 'make depend' can't hack yacc files.
 parser.o:	my-ctype.h my-math.h my-stdlib.h my-string.h \
 		ast.h code_gen.h config.h functions.h \
 		keywords.h list.h log.h numbers.h opcode.h parser.h program.h \
