--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -29,12 +29,12 @@ CFLAGS = -O
 YFLAGS = -d
 COMPILE.c = $(CC) $(CFLAGS) $(CPPFLAGS) -c
 
-CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
+CSRCS = ast.c ast_c2v.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
 	db_verbs.c decompile.c disassemble.c eval_env.c eval_vm.c \
 	exceptions.c execute.c extensions.c functions.c keywords.c list.c \
 	log.c malloc.c match.c md5.c name_lookup.c network.c net_mplex.c \
 	net_proto.c numbers.c objects.c parse_cmd.c pattern.c program.c \
-	property.c quota.c ref_count.c regexpr.c server.c storage.c streams.c str_intern.c \
+	property.c quota.c ref_count.c regexpr.c rt_const.c server.c storage.c streams.c str_intern.c \
 	sym_table.c tasks.c timers.c unparse.c utils.c verbs.c version.c
 
 OPT_NET_SRCS = net_single.c net_multi.c \
@@ -113,9 +113,8 @@ config.h: config.h.in config.status
 y.tab.h: parser.o
 	touch y.tab.h
 
-keywords.c: keywords.gperf
-	pgperf -aCIptT -k1,3,$$ keywords.gperf \
-		| sed -e 's/#include <ctype.h>/#include "my-ctype.h"/' \
+keywords.c: keywords.gperf igperf
+	./igperf -aCxptT -k1,3,$$ keywords.gperf \
 		> keywords.c
 
 dist.tar.Z:	$(DISTFILES)
@@ -154,6 +153,10 @@ depend: ${ALL_CSRCS}
 
 ###############################################################################
 # $Log: not supported by cvs2svn $
+# Revision 1.8  2000/05/11 06:32:27  xythian
+# fixed bloody "suspicious line 293" emacs warning when saving Makefile.in
+# by tweaking quotes
+#
 # Revision 1.7  2000/01/11 01:54:05  nop
 # CFLAGS line for poor users without inline keyword.
 #
@@ -307,76 +310,81 @@ $(OPT_NET_OBJS):
 
 # DO NOT DELETE THIS LINE -- 'make depend' replaces everything below it.
 ast.o: ast.c my-string.h config.h ast.h parser.h program.h \
- structures.h my-stdio.h version.h sym_table.h list.h log.h storage.h \
+ structures.h my-stdio.h version.h sym_table.h rt_const.h list.h log.h \
+ storage.h ref_count.h utils.h execute.h db.h opcode.h options.h \
+ parse_cmd.h
+ast_c2v.o: ast_c2v.c my-ctype.h config.h my-stdio.h ast.h parser.h \
+ program.h structures.h version.h sym_table.h rt_const.h storage.h \
  ref_count.h utils.h execute.h db.h opcode.h options.h parse_cmd.h
 code_gen.o: code_gen.c ast.h config.h parser.h program.h structures.h \
- my-stdio.h version.h sym_table.h exceptions.h opcode.h options.h \
- storage.h ref_count.h str_intern.h utils.h execute.h db.h parse_cmd.h \
- my-stdlib.h
+ my-stdio.h version.h sym_table.h rt_const.h exceptions.h opcode.h \
+ options.h storage.h ref_count.h str_intern.h utils.h execute.h db.h \
+ parse_cmd.h my-stdlib.h
 db_file.o: db_file.c my-stat.h config.h my-stdio.h my-stdlib.h db.h \
- program.h structures.h version.h db_io.h db_private.h exceptions.h \
- list.h log.h options.h server.h network.h storage.h ref_count.h \
- streams.h str_intern.h tasks.h execute.h opcode.h parse_cmd.h \
- timers.h my-time.h
+ program.h structures.h version.h db_io.h sym_table.h db_private.h \
+ exceptions.h list.h log.h options.h server.h network.h storage.h \
+ ref_count.h streams.h str_intern.h tasks.h execute.h opcode.h \
+ parse_cmd.h timers.h my-time.h
 db_io.o: db_io.c my-ctype.h config.h my-stdarg.h my-stdio.h \
- my-stdlib.h db_io.h program.h structures.h version.h db_private.h \
- exceptions.h list.h log.h numbers.h parser.h storage.h ref_count.h \
- streams.h str_intern.h unparse.h
+ my-stdlib.h db_io.h program.h structures.h version.h sym_table.h \
+ db_private.h exceptions.h list.h log.h numbers.h parser.h storage.h \
+ ref_count.h streams.h str_intern.h unparse.h
 db_objects.o: db_objects.c config.h db.h program.h structures.h \
  my-stdio.h version.h db_private.h exceptions.h list.h storage.h \
- ref_count.h utils.h execute.h opcode.h options.h parse_cmd.h
+ ref_count.h utils.h execute.h opcode.h options.h parse_cmd.h \
+ sym_table.h
 db_properties.o: db_properties.c config.h db.h program.h structures.h \
  my-stdio.h version.h db_private.h exceptions.h list.h storage.h \
- ref_count.h utils.h execute.h opcode.h options.h parse_cmd.h
+ ref_count.h utils.h execute.h opcode.h options.h parse_cmd.h \
+ sym_table.h
 db_verbs.o: db_verbs.c my-stdlib.h config.h my-string.h db.h program.h \
  structures.h my-stdio.h version.h db_private.h exceptions.h db_tune.h \
  list.h log.h parse_cmd.h storage.h ref_count.h utils.h execute.h \
- opcode.h options.h
+ opcode.h options.h sym_table.h
 decompile.o: decompile.c ast.h config.h parser.h program.h \
- structures.h my-stdio.h version.h sym_table.h decompile.h \
+ structures.h my-stdio.h version.h sym_table.h rt_const.h decompile.h \
  exceptions.h opcode.h options.h storage.h ref_count.h utils.h \
  execute.h db.h parse_cmd.h
 disassemble.o: disassemble.c my-stdio.h config.h bf_register.h db.h \
  program.h structures.h version.h functions.h execute.h opcode.h \
- options.h parse_cmd.h list.h storage.h ref_count.h streams.h \
- unparse.h utils.h verbs.h
+ options.h parse_cmd.h sym_table.h list.h storage.h ref_count.h \
+ streams.h unparse.h utils.h verbs.h
 eval_env.o: eval_env.c config.h eval_env.h structures.h my-stdio.h \
  version.h storage.h ref_count.h sym_table.h utils.h execute.h db.h \
  program.h opcode.h options.h parse_cmd.h
 eval_vm.o: eval_vm.c config.h db_io.h program.h structures.h \
- my-stdio.h version.h decompile.h ast.h parser.h sym_table.h eval_vm.h \
- execute.h db.h opcode.h options.h parse_cmd.h log.h storage.h \
- ref_count.h tasks.h
+ my-stdio.h version.h sym_table.h decompile.h ast.h parser.h \
+ rt_const.h eval_vm.h execute.h db.h opcode.h options.h parse_cmd.h \
+ log.h storage.h ref_count.h tasks.h
 exceptions.o: exceptions.c exceptions.h config.h
 execute.o: execute.c my-string.h config.h db.h program.h structures.h \
- my-stdio.h version.h db_io.h decompile.h ast.h parser.h sym_table.h \
- eval_env.h eval_vm.h execute.h opcode.h options.h parse_cmd.h \
- exceptions.h functions.h list.h log.h numbers.h server.h network.h \
- storage.h ref_count.h streams.h tasks.h timers.h my-time.h utils.h
+ my-stdio.h version.h db_io.h sym_table.h decompile.h ast.h parser.h \
+ rt_const.h eval_env.h eval_vm.h execute.h opcode.h options.h \
+ parse_cmd.h exceptions.h functions.h list.h log.h numbers.h server.h \
+ network.h storage.h ref_count.h streams.h tasks.h timers.h my-time.h \
+ unparse.h utils.h
 extensions.o: extensions.c bf_register.h functions.h my-stdio.h \
  config.h execute.h db.h program.h structures.h version.h opcode.h \
- options.h parse_cmd.h db_tune.h utils.h
+ options.h parse_cmd.h sym_table.h db_tune.h utils.h
 functions.o: functions.c my-stdarg.h config.h bf_register.h db_io.h \
- program.h structures.h my-stdio.h version.h functions.h execute.h \
- db.h opcode.h options.h parse_cmd.h list.h log.h server.h network.h \
- storage.h ref_count.h streams.h unparse.h utils.h
-keywords.o: keywords.c my-ctype.h config.h my-string.h keywords.h \
- structures.h my-stdio.h version.h tokens.h ast.h parser.h program.h \
- sym_table.h y.tab.h utils.h execute.h db.h opcode.h options.h \
- parse_cmd.h
+ program.h structures.h my-stdio.h version.h sym_table.h functions.h \
+ execute.h db.h opcode.h options.h parse_cmd.h list.h log.h server.h \
+ network.h storage.h ref_count.h streams.h unparse.h utils.h
+keywords.o: keywords.c
 list.o: list.c my-ctype.h config.h my-string.h bf_register.h \
  exceptions.h functions.h my-stdio.h execute.h db.h program.h \
- structures.h version.h opcode.h options.h parse_cmd.h list.h log.h \
- md5.h pattern.h random.h ref_count.h streams.h storage.h unparse.h \
- utils.h
+ structures.h version.h opcode.h options.h parse_cmd.h sym_table.h \
+ list.h log.h md5.h pattern.h random.h ref_count.h streams.h storage.h \
+ unparse.h utils.h
 log.o: log.c my-stdarg.h config.h my-stdio.h my-string.h my-time.h \
  bf_register.h functions.h execute.h db.h program.h structures.h \
- version.h opcode.h options.h parse_cmd.h log.h storage.h ref_count.h \
- streams.h utils.h
+ version.h opcode.h options.h parse_cmd.h sym_table.h log.h storage.h \
+ ref_count.h streams.h utils.h
 malloc.o: malloc.c options.h config.h
 match.o: match.c my-stdlib.h config.h my-string.h db.h program.h \
  structures.h my-stdio.h version.h exceptions.h match.h parse_cmd.h \
- storage.h ref_count.h unparse.h utils.h execute.h opcode.h options.h
+ storage.h ref_count.h unparse.h utils.h execute.h opcode.h options.h \
+ sym_table.h
 md5.o: md5.c my-string.h config.h md5.h
 name_lookup.o: name_lookup.c options.h config.h my-signal.h \
  my-stdlib.h my-unistd.h my-inet.h my-in.h my-types.h my-socket.h \
@@ -387,89 +395,96 @@ network.o: network.c options.h config.h net_multi.c my-ctype.h \
  my-unistd.h exceptions.h list.h structures.h log.h net_mplex.h \
  net_multi.h net_proto.h network.h server.h streams.h storage.h \
  ref_count.h timers.h my-time.h utils.h execute.h db.h program.h \
- version.h opcode.h parse_cmd.h
+ version.h opcode.h parse_cmd.h sym_table.h
 net_mplex.o: net_mplex.c options.h config.h net_mp_selct.c my-string.h \
  my-sys-time.h my-types.h log.h my-stdio.h structures.h net_mplex.h
 net_proto.o: net_proto.c options.h config.h net_bsd_tcp.c my-inet.h \
  my-in.h my-types.h my-socket.h my-stdlib.h my-string.h my-unistd.h \
  list.h structures.h my-stdio.h log.h name_lookup.h net_proto.h \
  server.h network.h streams.h timers.h my-time.h utils.h execute.h \
- db.h program.h version.h opcode.h parse_cmd.h
+ db.h program.h version.h opcode.h parse_cmd.h sym_table.h
 numbers.o: numbers.c my-math.h my-stdlib.h config.h my-string.h \
  my-time.h functions.h my-stdio.h execute.h db.h program.h \
- structures.h version.h opcode.h options.h parse_cmd.h log.h random.h \
- storage.h ref_count.h utils.h
+ structures.h version.h opcode.h options.h parse_cmd.h sym_table.h \
+ log.h random.h storage.h ref_count.h utils.h
 objects.o: objects.c db.h config.h program.h structures.h my-stdio.h \
- version.h db_io.h exceptions.h execute.h opcode.h options.h \
- parse_cmd.h functions.h list.h numbers.h quota.h server.h network.h \
- storage.h ref_count.h utils.h
+ version.h db_io.h sym_table.h exceptions.h execute.h opcode.h \
+ options.h parse_cmd.h functions.h list.h numbers.h quota.h server.h \
+ network.h storage.h ref_count.h utils.h
 parse_cmd.o: parse_cmd.c my-ctype.h config.h my-stdio.h my-stdlib.h \
  my-string.h my-time.h db.h program.h structures.h version.h list.h \
  match.h parse_cmd.h storage.h ref_count.h utils.h execute.h opcode.h \
- options.h
+ options.h sym_table.h
 pattern.o: pattern.c my-ctype.h config.h my-stdlib.h my-string.h \
  pattern.h regexpr.h storage.h structures.h my-stdio.h ref_count.h \
  streams.h
 program.o: program.c ast.h config.h parser.h program.h structures.h \
- my-stdio.h version.h sym_table.h exceptions.h list.h storage.h \
- ref_count.h utils.h execute.h db.h opcode.h options.h parse_cmd.h
+ my-stdio.h version.h sym_table.h rt_const.h exceptions.h list.h \
+ storage.h ref_count.h utils.h execute.h db.h opcode.h options.h \
+ parse_cmd.h
 property.o: property.c db.h config.h program.h structures.h my-stdio.h \
- version.h functions.h execute.h opcode.h options.h parse_cmd.h list.h \
- storage.h ref_count.h utils.h
+ version.h functions.h execute.h opcode.h options.h parse_cmd.h \
+ sym_table.h list.h storage.h ref_count.h utils.h
 quota.o: quota.c config.h db.h program.h structures.h my-stdio.h \
  version.h quota.h
 ref_count.o: ref_count.c config.h exceptions.h ref_count.h storage.h \
  structures.h my-stdio.h
 regexpr.o: regexpr.c my-stdio.h config.h regexpr.h my-stdlib.h \
  my-string.h
+rt_const.o: rt_const.c config.h storage.h structures.h my-stdio.h \
+ ref_count.h rt_const.h utils.h execute.h db.h program.h version.h \
+ opcode.h options.h parse_cmd.h sym_table.h
 server.o: server.c my-types.h config.h my-signal.h my-stdarg.h \
  my-stdio.h my-stdlib.h my-string.h my-unistd.h my-wait.h db.h \
- program.h structures.h version.h db_io.h disassemble.h execute.h \
- opcode.h options.h parse_cmd.h functions.h list.h log.h network.h \
- server.h parser.h random.h storage.h ref_count.h streams.h tasks.h \
- timers.h my-time.h unparse.h utils.h
+ program.h structures.h version.h db_io.h sym_table.h disassemble.h \
+ execute.h opcode.h options.h parse_cmd.h functions.h list.h log.h \
+ network.h server.h parser.h random.h storage.h ref_count.h streams.h \
+ tasks.h timers.h my-time.h unparse.h utils.h
 storage.o: storage.c my-stdlib.h config.h exceptions.h list.h \
  structures.h my-stdio.h options.h ref_count.h storage.h utils.h \
- execute.h db.h program.h version.h opcode.h parse_cmd.h
+ execute.h db.h program.h version.h opcode.h parse_cmd.h sym_table.h
 streams.o: streams.c my-stdarg.h config.h my-string.h my-stdio.h log.h \
  structures.h storage.h ref_count.h streams.h
 str_intern.o: str_intern.c my-stdlib.h config.h log.h my-stdio.h \
  structures.h storage.h ref_count.h str_intern.h utils.h execute.h \
- db.h program.h version.h opcode.h options.h parse_cmd.h
+ db.h program.h version.h opcode.h options.h parse_cmd.h sym_table.h
 sym_table.o: sym_table.c my-stdio.h config.h ast.h parser.h program.h \
- structures.h version.h sym_table.h exceptions.h log.h storage.h \
- ref_count.h utils.h execute.h db.h opcode.h options.h parse_cmd.h
+ structures.h version.h sym_table.h rt_const.h exceptions.h log.h \
+ storage.h ref_count.h utils.h execute.h db.h opcode.h options.h \
+ parse_cmd.h
 tasks.o: tasks.c my-string.h config.h my-time.h db.h program.h \
- structures.h my-stdio.h version.h db_io.h decompile.h ast.h parser.h \
- sym_table.h eval_env.h eval_vm.h execute.h opcode.h options.h \
- parse_cmd.h exceptions.h functions.h list.h log.h match.h random.h \
- server.h network.h storage.h ref_count.h streams.h tasks.h utils.h \
- verbs.h
+ structures.h my-stdio.h version.h db_io.h sym_table.h decompile.h \
+ ast.h parser.h rt_const.h eval_env.h eval_vm.h execute.h opcode.h \
+ options.h parse_cmd.h exceptions.h functions.h list.h log.h match.h \
+ random.h server.h network.h storage.h ref_count.h streams.h tasks.h \
+ utils.h verbs.h
 timers.o: timers.c my-signal.h config.h my-stdlib.h my-sys-time.h \
  options.h my-types.h my-time.h my-unistd.h timers.h
 unparse.o: unparse.c my-ctype.h config.h my-stdio.h ast.h parser.h \
- program.h structures.h version.h sym_table.h decompile.h exceptions.h \
- functions.h execute.h db.h opcode.h options.h parse_cmd.h keywords.h \
- list.h log.h unparse.h storage.h ref_count.h streams.h utils.h
+ program.h structures.h version.h sym_table.h rt_const.h decompile.h \
+ exceptions.h functions.h execute.h db.h opcode.h options.h \
+ parse_cmd.h keywords.h list.h log.h unparse.h storage.h ref_count.h \
+ streams.h utils.h
 utils.o: utils.c my-ctype.h config.h my-stdio.h my-string.h db.h \
- program.h structures.h version.h db_io.h exceptions.h list.h log.h \
- match.h numbers.h ref_count.h server.h network.h options.h storage.h \
- streams.h utils.h execute.h opcode.h parse_cmd.h
+ program.h structures.h version.h db_io.h sym_table.h exceptions.h \
+ list.h log.h match.h numbers.h ref_count.h server.h network.h \
+ options.h storage.h streams.h utils.h execute.h opcode.h parse_cmd.h
 verbs.o: verbs.c my-string.h config.h db.h program.h structures.h \
  my-stdio.h version.h exceptions.h execute.h opcode.h options.h \
- parse_cmd.h functions.h list.h log.h match.h parser.h server.h \
- network.h storage.h ref_count.h unparse.h utils.h verbs.h
+ parse_cmd.h sym_table.h functions.h list.h log.h match.h parser.h \
+ server.h network.h storage.h ref_count.h unparse.h utils.h verbs.h
 version.o: version.c config.h version.h
 gnu-malloc.o: gnu-malloc.c getpagesize.h
 net_single.o: net_single.c my-ctype.h config.h my-fcntl.h my-stdio.h \
  my-unistd.h log.h structures.h network.h options.h server.h streams.h \
- utils.h execute.h db.h program.h version.h opcode.h parse_cmd.h
+ utils.h execute.h db.h program.h version.h opcode.h parse_cmd.h \
+ sym_table.h
 net_multi.o: net_multi.c my-ctype.h config.h my-fcntl.h my-ioctl.h \
  my-signal.h my-stdio.h my-stdlib.h my-string.h my-unistd.h \
  exceptions.h list.h structures.h log.h net_mplex.h net_multi.h \
  net_proto.h options.h network.h server.h streams.h storage.h \
  ref_count.h timers.h my-time.h utils.h execute.h db.h program.h \
- version.h opcode.h parse_cmd.h
+ version.h opcode.h parse_cmd.h sym_table.h
 net_mp_selct.o: net_mp_selct.c my-string.h config.h my-sys-time.h \
  options.h my-types.h log.h my-stdio.h structures.h net_mplex.h
 net_mp_poll.o: net_mp_poll.c my-poll.h config.h log.h my-stdio.h \
@@ -478,11 +493,11 @@ net_bsd_tcp.o: net_bsd_tcp.c my-inet.h config.h my-in.h my-types.h \
  my-socket.h my-stdlib.h my-string.h my-unistd.h list.h structures.h \
  my-stdio.h log.h name_lookup.h net_proto.h options.h server.h \
  network.h streams.h timers.h my-time.h utils.h execute.h db.h \
- program.h version.h opcode.h parse_cmd.h
+ program.h version.h opcode.h parse_cmd.h sym_table.h
 net_bsd_lcl.o: net_bsd_lcl.c my-socket.h config.h my-stdio.h \
  my-string.h my-unistd.h log.h structures.h net_proto.h options.h \
  storage.h ref_count.h utils.h execute.h db.h program.h version.h \
- opcode.h parse_cmd.h
+ opcode.h parse_cmd.h sym_table.h
 net_sysv_tcp.o: net_sysv_tcp.c my-inet.h config.h my-fcntl.h my-in.h \
  my-types.h my-ioctl.h my-socket.h my-stdlib.h my-string.h \
  my-stropts.h my-tiuser.h my-unistd.h log.h my-stdio.h structures.h \
@@ -492,7 +507,7 @@ net_sysv_lcl.o: net_sysv_lcl.c my-fcntl.h config.h my-stat.h \
  my-stdio.h my-stdlib.h my-unistd.h exceptions.h list.h structures.h \
  log.h net_multi.h net_proto.h options.h storage.h ref_count.h \
  streams.h utils.h execute.h db.h program.h version.h opcode.h \
- parse_cmd.h
+ parse_cmd.h sym_table.h
 client_bsd.o: client_bsd.c my-socket.h config.h my-stdio.h my-stdlib.h \
  my-string.h my-sys-time.h options.h my-types.h my-unistd.h
 client_sysv.o: client_sysv.c my-fcntl.h config.h my-signal.h \
