--- a/server/config.h.in
+++ b/server/config.h.in
@@ -60,6 +60,7 @@
 #undef NDECL_TOLOWER		/* <ctype.h>      */
 #undef NDECL_FCNTL		/* <fcntl.h>      */
 #undef NDECL_HTONL		/* <netinet/in.h> */
+#undef NDECL_IN_ADDR_T		/* <netinet/in.h> */
 #undef NDECL_IOCTL		/* <sys/ioctl.h>  */
 #undef NDECL_POLL		/* <poll.h>	  */
 #undef NDECL_KILL		/* <signal.h>	  */
@@ -272,6 +273,9 @@
 
 /* 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  1998/12/29 05:26:51  nop
+ * Fixed one more Log keyword that slipped by.
+ *
  * Revision 1.1.1.1  1997/03/03 03:45:06  nop
  * LambdaMOO 1.8.0p5
  *
