changed .Z targets to .gz targets (no one uses compress anymore, right?) txt target: fixed sed script to be able to deal with cross references html target: updated to use subdir option and include link to common.css style-sheet added pdf target; added distclean target

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -1,8 +1,9 @@
 MI_OPTS = --fill-column 79 --no-split
 
 OUT = ProgrammersManual.info ProgrammersManual.txt \
-      ProgrammersManual_toc.html \
-      ProgrammersManual.ps.Z ProgrammersManual.dvi.Z
+      html/ProgrammersManual_toc.html \
+      ProgrammersManual.ps.gz ProgrammersManual.dvi.gz \
+      ProgrammersManual.pdf
 
 all: ${OUT}
 
@@ -14,11 +15,18 @@ txt: ProgrammersManual.txt
 ProgrammersManual.txt: ProgrammersManual.tex-no-info
 	makeinfo ${MI_OPTS} ProgrammersManual.tex-no-info
 
+# ought to be
+#ProgrammersManual.txt: ProgrammersManual.texinfo
+#	makeinfo ${MI_OPTS} -D INDEX --no-headers ProgrammersManual.texinfo > ProgrammersManual.txt
+
 ProgrammersManual.tex-no-info: ProgrammersManual.texinfo
 	sed -e '/^@node/d' \
 	    -e '/^@set INDEX/d' \
 	    -e '/^@menu/,/^@end menu/d' \
 	    -e '/^@setfilename/s/info/txt/' \
+	    -e 's/@ref{\([^,}]*,\)*\([^}]*\)}/the section "\2"/' \
+	    -e 's/@pxref{\([^,}]*,\)*\(\(@[a-z]*{[^}]*}\|[^@}]\)*\)}/see "\2"/' \
+	    -e 's/@xref{\([^,}]*,\)*\([^}]*\)}/See the section "\2"/' \
 	    < ProgrammersManual.texinfo > ProgrammersManual.tex-no-info
 
 ps: ProgrammersManual.ps
@@ -31,19 +39,27 @@ ProgrammersManual.dvi: ProgrammersManual.texinfo
 	texindex ProgrammersManual.fn
 	tex ProgrammersManual.texinfo
 
-html: ProgrammersManual_toc.html
-ProgrammersManual_toc.html: ProgrammersManual.texinfo
-	texi2html -menu -split_node ProgrammersManual.texinfo
+pdf: ProgrammersManual.pdf
+ProgrammersManual.pdf: ProgrammersManual.texinfo
+	texi2pdf --clean --batch ProgrammersManual.texinfo
+
+
+html: html/ProgrammersManual_toc.html
+html/ProgrammersManual_toc.html: ProgrammersManual.texinfo
+	rm -rf html
+	texi2html -menu -split section -init_file t2hinit.pl -subdir html -top_file index.html -expand info ProgrammersManual.texinfo
+	cp -p common.css html
 	@echo ====================
 	@echo Checking for TexInfo commands left in the html...
-	@texi2html -check ProgrammersManual_*.html
+	@texi2html -check html/ProgrammersManual_*.html
 	@echo ====================
-	rm -f html/ProgrammersManual_*.html
-	-mkdir html
-	mv ProgrammersManual_*.html html
+
 
 %.Z: %
 	compress -c $< > $@
+
+%.gz: %
+	gzip -c $< > $@
 
 clean:
 	rm -f *~ ProgrammersManual.tex-no-info
@@ -51,8 +67,17 @@ clean:
 	rm -f ProgrammersManual.pg ProgrammersManual.tp ProgrammersManual.vr
 	rm -f ProgrammersManual.log ProgrammersManual.aux ProgrammersManual.toc
 	rm -f ProgrammersManual.fns
+	rm -f ProgrammersManual.tmp
+
+distclean: clean
+	rm -f ProgrammersManual.dvi* ProgrammersManual.p* ProgrammersManual.i*
+	rm -f ProgrammersManual.txt
+	rm -rf html
 
 # $Log: not supported by cvs2svn $
+# Revision 1.1.1.2  2004/05/31 07:04:20  wrog
+# eostrom last version
+#
 # Revision 1.4  1996/07/09 20:35:41  pavel
 # Added short target names ('info', 'txt', 'ps', etc.) for all targets.
 # Fixed up makeinfo options to get proper results for all targets.
