--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -105,9 +105,9 @@ configure: configure.in
 config.status: configure
 	env CC= YACC= ./configure --no-create
 
-Makefile: Makefile.in config.status
+Makefile: Makefile.in configure
+	env CC= YACC= ./configure
 	@echo "[ $@ : $? ]"
-	./config.status
 
 config.h: config.h.in config.status
 	@echo "[ $@ : $? ]"
@@ -157,6 +157,10 @@ depend: ${ALL_CSRCS}
 
 ###############################################################################
 # $Log: not supported by cvs2svn $
+# Revision 1.9.2.1  2004/07/13 02:06:36  xplat
+# Initial autoconf2.50 integration (may need work).  Also, make dist tarballs
+# using gzip instead of compress.
+#
 # Revision 1.9  2004/05/22 01:25:43  wrog
 # merging in WROGUE changes (W_SRCIP, W_STARTUP, W_OOB)
 #
