removing ident stuff; specifically, commented it out of options.h, and removed the flag I put in Makefile.in to look for the ident library.

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -23,7 +23,7 @@
 EXPAT_OBJS = -lexpat
 
 CC = @CC@ 
-LIBRARIES = @LIBS@ $(EXPAT_OBJS) -lident
+LIBRARIES = @LIBS@ $(EXPAT_OBJS)
 YACC = @YACC@
 
 CFLAGS = -O -DEXPAT_XML
