--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -44,7 +44,8 @@ CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
 	log.c malloc.c match.c md5.c name_lookup.c network.c net_mplex.c \
 	net_proto.c numbers.c objects.c parse_cmd.c pattern.c program.c \
 	property.c quota.c ref_count.c regexpr.c server.c storage.c streams.c str_intern.c \
-	sym_table.c tasks.c timers.c unparse.c utils.c verbs.c version.c ext-xml.c
+	sym_table.c tasks.c timers.c unparse.c utils.c verbs.c version.c \
+	ext-xml.c bg_name_lookup.c
 
 OPT_NET_SRCS = net_single.c net_multi.c \
 	net_mp_selct.c net_mp_poll.c net_mp_fake.c \
@@ -520,3 +521,6 @@ client_bsd.o: client_bsd.c my-socket.h config.h my-stdio.h my-stdlib.h \
 client_sysv.o: client_sysv.c my-fcntl.h config.h my-signal.h \
  my-stdio.h my-stdlib.h my-string.h my-types.h my-stat.h my-unistd.h \
  options.h
+bg_name_lookup.o : bg_name_lookup.c tasks.h structures.h functions.h \
+ utils.h list.h my-in.h log.h exceptions.h net_multi.h storage.h \
+ server.h
