--- a/server/config.h.in
+++ b/server/config.h.in
@@ -258,7 +258,9 @@
 #if INT_MAX == 2147483647
    typedef int		int32;
    typedef unsigned	unsigned32;
+#  ifndef INT32_MAX
 #  define INT32_MAX	INT_MAX
+#  endif
 #else
 #  if LONG_MAX == 2147483647
      typedef long int		int32;
