commenting the rule "pure_moo" : 'purify' is a memory access tester which today is IBM Rational Purify.

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -93,6 +93,7 @@ OBJS = $(COBJS) $(YOBJS)
 moo:	$(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
 
+# 'purify' is a memory leak checker, now IBM Rational Purify. --sw
 pure_moo: moo
 	purify $(CC) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
 
