removed the '-t' flag to etags, which it doesn't have... though it seems superflous to me to have your makefile generate your tags file... but what do I know?

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -149,7 +149,7 @@ dist.tar.Z:	$(DISTFILES)
 	rm -fr MOO-`cat version_number` version_number
 
 tags:
-	etags -t $(SRCS)
+	etags $(SRCS)
 
 clean:
 	rm -f $(OBJS) $(OPT_NET_OBJS) core parser.c y.tab.c y.tab.h y.output makedep eddep
