changing AC_CONFIG_HEADER to AC_CONFIG_HEADERS per the No Starch Press book on autotools; claims the newer macro is more functional, though the 'configure' script it output is no different.

--- a/server/configure.in
+++ b/server/configure.in
@@ -18,7 +18,7 @@ dnl
 AC_PREREQ([2.66])
 AC_INIT([Waverous LambdaMOO], [beta1], [wainstead@gmail.com], [waverous-lambdamoo], [http://code.google.com/p/waverous/])
 AC_CONFIG_SRCDIR([functions.c])
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 
 
 
