I'm removing the hardcoded definition of the compiler:
CC = @CC@

and substituting $(CC) for $(CXX) throughout. What this does is cause
'make' to use the system default C++ compiler. I tried to use @CXX@
instead of removing the line above but it didn't work.

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -22,7 +22,7 @@
 
 EXPAT_OBJS = -lexpat
 
-CC = @CC@ 
+
 LIBRARIES = @LIBS@ $(EXPAT_OBJS)
 YACC = @YACC@
 
@@ -36,7 +36,7 @@ CFLAGS = -O -DEXPAT_XML
 # CFLAGS = -O2 -Dinline=
 
 YFLAGS = -d
-COMPILE.c = $(CC) $(CFLAGS) $(CPPFLAGS) -c
+COMPILE.c = $(CXX) $(CFLAGS) $(CPPFLAGS) -c
 
 CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
 	db_verbs.c decompile.c disassemble.c eval_env.c eval_vm.c \
@@ -91,17 +91,17 @@ YOBJS = $(YSRCS:.y=.o)
 OBJS = $(COBJS) $(YOBJS)
 
 moo:	$(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
+	$(CXX) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
 
 # 'purify' is a memory leak checker, now IBM Rational Purify. --sw
 pure_moo: moo
-	purify $(CC) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
+	purify $(CXX) $(CFLAGS) $(OBJS) $(LIBRARIES) -o $@
 
 client_bsd: client_bsd.o
-	$(CC) $(CFLAGS) client_bsd.o $(LIBRARIES) -o $@
+	$(CXX) $(CFLAGS) client_bsd.o $(LIBRARIES) -o $@
 
 client_sysv: client_sysv.o
-	$(CC) $(CFLAGS) client_sysv.o $(LIBRARIES) -o $@
+	$(CXX) $(CFLAGS) client_sysv.o $(LIBRARIES) -o $@
 
 # This rule gets around some "make"s' desire to `derive' it from `restart.sh'.
 restart:
