--- a/server/configure.in
+++ b/server/configure.in
@@ -284,7 +284,7 @@ dnl Start of actual configuration tests
 dnl ***************************************************************************
 
 AC_PROG_YACC
-AC_PROG_CC
+AC_PROG_CXX
 AC_GCC_TRADITIONAL
 AC_PROGRAM_EGREP(yes, [
 #if __GNUC__==2
