default to -m32 for compiles, since the server is not 64 bit safe yet.

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -28,7 +28,7 @@ CC = @CXX@
 LIBRARIES = @LIBS@ $(EXPAT_OBJS)
 YACC = @YACC@
 
-CFLAGS = -O -DEXPAT_XML
+CFLAGS = -m32 -O -DEXPAT_XML 
 # If you're using GCC, you may prefer:
 # CFLAGS = -O2 -finline-functions
 #
