--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -40,7 +40,7 @@ COMPILE.c = $(CC) $(CFLAGS) $(CPPFLAGS) -c
 CSRCS = ast.c code_gen.c db_file.c db_io.c db_objects.c db_properties.c \
 	db_verbs.c decompile.c disassemble.c eval_env.c eval_vm.c \
 	exceptions.c execute.c extensions.c ext-FUP.c functions.c keywords.c list.c \
-	log.c malloc.c match.c md5.c name_lookup.c network.c net_mplex.c \
+	log.c match.c md5.c name_lookup.c network.c net_mplex.c \
 	net_proto.c numbers.c objects.c parse_cmd.c pattern.c program.c \
 	property.c quota.c ref_count.c regexpr.c server.c storage.c streams.c str_intern.c \
 	sym_table.c tasks.c timers.c unparse.c utils.c verbs.c version.c \
@@ -52,8 +52,6 @@ OPT_NET_SRCS = net_single.c net_multi.c \
 	net_bsd_tcp.c net_bsd_lcl.c net_sysv_tcp.c net_sysv_lcl.c
 
 OPT_NET_OBJS = $(OPT_NET_SRCS:.c=.o)
-
-OPT_CSRCS = gnu-malloc.c $(OPT_NET_SRCS)
 
 YSRCS = parser.y
 
@@ -74,7 +72,7 @@ SYSHDRS = my-ctype.h my-fcntl.h my-in.h my-inet.h my-ioctl.h my-math.h \
 
 CLIENT_SRCS = client_bsd.c client_sysv.c
 
-ALL_CSRCS = $(CSRCS) $(OPT_CSRCS) $(CLIENT_SRCS)
+ALL_CSRCS = $(CSRCS) $(CLIENT_SRCS)
 
 SRCS = $(ALL_CSRCS) keywords.gperf $(YSRCS) $(HDRS) $(SYSHDRS)
 
@@ -233,7 +231,6 @@ log.o: log.c my-stdarg.h config.h my-stdio.h my-string.h my-time.h \
  bf_register.h functions.h execute.h db.h program.h structures.h \
  version.h opcode.h options.h parse_cmd.h log.h storage.h ref_count.h \
  streams.h utils.h
-malloc.o: malloc.c options.h config.h
 match.o: match.c my-stdlib.h config.h my-string.h db.h program.h \
  structures.h my-stdio.h version.h exceptions.h match.h parse_cmd.h \
  storage.h ref_count.h unparse.h utils.h execute.h opcode.h options.h
@@ -320,7 +317,6 @@ verbs.o: verbs.c my-string.h config.h db.h program.h structures.h \
  parse_cmd.h functions.h list.h log.h match.h parser.h server.h \
  network.h storage.h ref_count.h unparse.h utils.h verbs.h
 version.o: version.c config.h version.h
-gnu-malloc.o: gnu-malloc.c getpagesize.h
 net_single.o: net_single.c my-ctype.h config.h my-fcntl.h my-stdio.h \
  my-unistd.h log.h structures.h network.h options.h server.h streams.h \
  utils.h execute.h db.h program.h version.h opcode.h parse_cmd.h
