Adding install-sh per the GNU Coding Standards, the m4 macro AC_PROG_INSTALL to configure.in, and two variables to the Makefile.in.

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -31,8 +31,10 @@ YACC = @YACC@
 # for debugging you might prefer:
 # CFLAGS='-g -m32 -O0 -Wall -DEXPAT_XML
 
-CFLAGS   = -m32 -O -DEXPAT_XML 
-CPPFLAGS = @CPPFLAGS@
+CFLAGS		= -m32 -O -DEXPAT_XML 
+CPPFLAGS	= @CPPFLAGS@
+INSTALL         = @INSTALL@
+INSTALL_DATA	= @INSTALL_DATA@
 
 YFLAGS = -d
 COMPILE.c = $(CC) $(CFLAGS) $(CPPFLAGS) -c
