--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -5,27 +5,13 @@
 # derivative works must comply with all applicable United States export
 # control laws.  This software is made available AS IS, and Xerox Corporation
 # makes no warranty about the software, its performance or its conformity to
-# any specification.  Any person obtaining a copy of this software is requested
-# to send their name and post office or electronic mail address to:
-#   Pavel Curtis
-#   Xerox PARC
-#   3333 Coyote Hill Rd.
-#   Palo Alto, CA 94304
-#   Pavel@Xerox.Com
-
+# any specification.
 
 # @configure_input@
 
-
-# with autoconf2 I'll go edit it to support --with-expat=
-# Until then, set this to where you unpacked and compiled expat
-
-EXPAT_OBJS = -lexpat
-
-
 CC = @CXX@
 
-LIBRARIES = @LIBS@ $(EXPAT_OBJS)
+LIBRARIES = @LIBS@
 YACC = @YACC@
 
 # for debugging you might prefer:
@@ -129,7 +115,7 @@ keywords.c: keywords.gperf
 		| sed -e 's/#include <ctype.h>/#include "my-ctype.h"/' \
 		> keywords.c
 
-tags:
+TAGS:
 	etags $(SRCS)
 
 clean:
