--- a/server/configure.in
+++ b/server/configure.in
@@ -316,6 +316,9 @@ AC_MODE_T
 AC_SIZE_T
 AC_STRUCT_TM
 AC_TIMEZONE
+
+AC_SEARCH_LIBS([XML_ParserCreate], [expat])
+
 MOO_HAVE_FUNC_LIBS(sqrt, -lm /lib/libm.a "-static -lm")
 MOO_HAVE_FUNC_LIBS(mkfifo waitpid sigemptyset, -lposix /lib/libposix.a)
 MOO_HAVE_FUNC_LIBS(accept, "-lsocket -lnsl" -lsocket -linet)
