--- a/server/configure.in
+++ b/server/configure.in
@@ -520,6 +520,7 @@ yes
 ], test -r /dev/tcp && MOO_ADD_NET_CONFIG(NS_SYSV/NP_TCP))
 
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h malloc.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h unistd.h])
+AC_CHECK_HEADERS([expat.h])
 AC_C_INLINE
 AC_FUNC_ALLOCA
 AC_FUNC_ERROR_AT_LINE
@@ -533,8 +534,6 @@ AC_PREREQ
 AC_PROG_LN_S
 AC_TYPE_SSIZE_T
 AC_CHECK_FUNCS([alarm bzero floor gethostbyaddr gethostbyname getpagesize gettimeofday inet_ntoa memmove memset mkdir mkfifo modf pow re_comp rmdir select socket strchr strcspn strerror strrchr strstr strtol strtoul])
-
-AC_CHECK_LIB([expat], [main])
 
 echo "----------------------------------------------------------------------"
 echo "| The following networking configurations will probably work on your"
