I've removed the  -DEXPAT_XML flag from the compiler flags, and I've replaced:
#ifdef EXPAT_XML

with:

#if HAVE_EXPAT_H

--- a/server/Makefile.in
+++ b/server/Makefile.in
@@ -15,9 +15,9 @@ LIBRARIES = @LIBS@
 YACC = @YACC@
 
 # for debugging you might prefer:
-# CFLAGS='-g -m32 -O0 -Wall -DEXPAT_XML
+# CFLAGS='-g -m32 -O0 -Wall
 
-CFLAGS		= -m32 -O -DEXPAT_XML 
+CFLAGS		= -m32 -O
 CPPFLAGS	= @CPPFLAGS@
 INSTALL         = @INSTALL@
 INSTALL_DATA	= @INSTALL_DATA@
