Experimental: you can now say ./configure --enable-openssl but SSL is not yet compiled into the app... first things first: getting autoconf to let the user specify it. Next up, patching the network stuff.

--- a/server/config.h.in
+++ b/server/config.h.in
@@ -279,6 +279,8 @@
 /* Expat is the XML parsing library by James Clark. */
 #undef HAVE_EXPAT_H
 
+/* OpenSSL */
+#undef USE_OPENSSL
 
 #endif /* !Config_H */
 
