Moved the option to log user commands in the event of a server panic out of options.h and into configure.ac/config.h.in/configure.

--- a/server/config.h.in
+++ b/server/config.h.in
@@ -282,5 +282,13 @@
 /* OpenSSL */
 #undef USE_OPENSSL
 
+/******************************************************************************
+ * The server is prepared to keep a log of every command entered by players
+ * since the last checkpoint.  The log is flushed whenever a checkpoint is
+ * successfully begun and is dumped into the server log when and if the server
+ * panics.  Define LOG_COMMANDS to enable this logging.
+ */
+#undef LOG_COMMANDS
+
 #endif /* !Config_H */
 
