--- a/server/configure.ac
+++ b/server/configure.ac
@@ -567,17 +567,30 @@ fi
 
 dnl Enable/disable user command logging
 AC_ARG_WITH([command-logging],
-        [AS_HELP_STRING([--with-command-logging],	[Log user commands since the last database checkpoint @<:@default: no@:>@])],
+        [AS_HELP_STRING([--with-command-logging],	[Log user commands since the last database checkpoint if the server panics @<:@default: no@:>@])],
         [log_commands=${withval}],
         [log_commands=no])
 
 if test "x${log_commands}" = xyes; then
-   AC_MSG_NOTICE([All user commands will be logged])
-   AC_DEFINE([LOG_COMMANDS], 1, [All user commands will be logged since the last database checkpoint])
+   AC_MSG_NOTICE([All user commands will be logged since the last database checkpoint if the server panics])
+   AC_DEFINE([LOG_COMMANDS], 1, [All user commands will be logged since the last database checkpoint if the server panics])
 else
-   AC_MSG_NOTICE([No user commands will be logged])
+   AC_MSG_NOTICE([No user commands will be logged in the event of a server panic])
 fi
 
+
+dnl Enable/disable unforked checkpoints
+AC_ARG_WITH([unforked-checkpoints],
+        [AS_HELP_STRING([--with-unforked-checkpoints],	[Do not fork() when doing a database checkpoint @<:@default: no@:>@])],
+        [unforked_checkpoints=${withval}],
+        [unforked_checkpoints=no])
+
+if test "x${unforked_checkpoints}" = xyes; then
+   AC_MSG_NOTICE([The server will not fork() when doing a database checkpoint])
+   AC_DEFINE([UNFORKED_CHECKPOINTS], 1, [The server will not fork() when doing a database checkpoint])
+else
+   AC_MSG_NOTICE([The server will fork() when doing a database checkpoint])
+fi
 
 
 dnl # let the user choose to enable ssl or not
